# rust_auth

./: .env  Cargo.toml
src/: User.rs  db.rs  main.rs
